# OutreachCopilot

./: .gitignore  LICENSE  Makefile
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/routers/: health.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/resumes/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: header.tsx  page-container.tsx  sidebar.tsx
frontend/src/hooks/: use-api-health.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/types/: generation.ts  job.ts  pipeline.ts  recipient.ts  resume.ts  settings.ts
