[project]
name = "outreach-copilot-backend"
version = "0.1.0"
description = "Local-first AI system for high-quality professional outreach"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openai>=1.50",
    "google-genai>=1.0",
    "cryptography>=43.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
workday = [
    "playwright>=1.45",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
